--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     justify-content: center;
     align-items: center;
 }
+.wrap{
+    flex-wrap: wrap;
+    word-wrap: break-word;
+    text-wrap: wrap;
+}
 .inline{
     display: inline;
     word-wrap: break-word;
