--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
     word-wrap: break-word;
     text-wrap: wrap;
 }
+.pad{
+    padding:10px 0px;
+}
 .inline{
     display: inline;
     word-wrap: break-word;
